|#000| +Riya overflowing of form-toolbar on regimen screen and configure rnr template screen fixed

--- a/modules/openlmis-web/src/main/webapp/public/less/content.less
+++ b/modules/openlmis-web/src/main/webapp/public/less/content.less
@@ -389,9 +389,6 @@ span[class^="tpl-"] {
     border-top: 0 none;
     border-bottom: 0 none;
   }
-  .action-buttons {
-    width: 1414px;
-  }
 }
 
 .editable-row {
